
[tool.poetry]
name = "bsc23grassroots"
version = "0.1.0"
description = "bsc23grassroots"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2"

# Additional dependencies go here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
